# marketplace-parser

./: LICENSE  Makefile  README (copy 1).md  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
marketplace_parser/: __init__.py  dataset.py  docker-compose.yml  features.py  main.py  plots.py  tmp.py
marketplace_parser/data/: 2025-02-14_jeans.json.csv
marketplace_parser/entities/: Data.py  DataSource.py  Product.py  Query.py  __init__.py
marketplace_parser/modeling/: predict.py  train.py
marketplace_parser/pipeline/: __init__.py  open_files.py  parse.py  to_csv.py  to_filters.py  to_queries.py
marketplace_parser/products/: jeans.json
marketplace_parser/src/: DataSource.py  Product.py  ProductFile.py
