[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "marketplace_parser"
version = "0.0.1"
description = "\u041f\u0430\u0440\u0441\u0435\u0440 \u0434\u043b\u044f ozon \u0418 wildberries"
authors = [
  { name = "iep" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["marketplace_parser"]
force_sort_within_sections = true
